# ChangeLog for mail-client/claws-mail-newmail
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-newmail/ChangeLog,v 1.7 2007/09/13 18:41:06 opfer Exp $

  13 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  claws-mail-newmail-0.0.11.ebuild:
  x86 stable, security bug 190104

*claws-mail-newmail-0.0.11 (03 Sep 2007)

  03 Sep 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-newmail-0.0.11.ebuild:
  Version bump.

*claws-mail-newmail-0.0.10 (07 Jul 2007)

  07 Jul 2007; <ticho@gentoo.org> +claws-mail-newmail-0.0.10.ebuild:
  Version bump.

  03 Feb 2007; Steve Dibb <beandog@gentoo.org>
  claws-mail-newmail-0.0.8.ebuild, claws-mail-newmail-0.0.9.ebuild:
  add ~amd64, bug 161306

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  claws-mail-newmail-0.0.8.ebuild:
  stable x86; bug #163611

*claws-mail-newmail-0.0.9 (09 Jan 2007)

  09 Jan 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-newmail-0.0.9.ebuild:
  Version bump.

*claws-mail-newmail-0.0.8 (19 Dec 2006)

  19 Dec 2006; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  +claws-mail-newmail-0.0.8.ebuild:
  This is the new name of mail-client/sylpheed-claws-newmail.
