@@ -1,24 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-newmail/Attic/claws-mail-newmail-0.0.8.ebuild,v 1.3 2007/02/03 03:43:26 beandog Exp $
-
-MY_P="${P#claws-mail-}"
-
-DESCRIPTION="Plugin which writes a header summary to a log file for each received mail."
-HOMEPAGE="http://www.claws-mail.org"
-SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 x86"
-IUSE=""
-DEPEND=">=mail-client/claws-mail-2.6.1"
-
-S="${WORKDIR}/${MY_P}"
-
-src_install() {
-	make DESTDIR="${D}" install
-	dodoc AUTHORS ChangeLog NEWS README
-
-	# kill useless files
-	rm -f ${D}/usr/lib*/claws-mail/plugins/*.{a,la}
-}
